--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,14 @@
   <body>
     <p class="navbar-text pull-right">
       <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path, class: 'navbar-link' %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, class: 'navbar-link'  %> |
-        <%= link_to "Users", users_path, class: 'navbar-link'  %> |
-        <%= link_to "Books", books_path, class: 'navbar-link'  %>
+        <%= t(:logged_in_as) %> <strong><%= current_user.email %></strong>.
+        <%= link_to t(:edit_profile), edit_user_registration_path, class: 'navbar-link' %> |
+        <%= link_to t(:logout), destroy_user_session_path, method: :delete, class: 'navbar-link'  %> |
+        <%= link_to t(:users), users_path, class: 'navbar-link'  %> |
+        <%= link_to t(:books), books_path, class: 'navbar-link'  %>
       <% else %>
-        <%= link_to "Sign up", new_user_registration_path, class: 'navbar-link'  %> |
-        <%= link_to "Login", new_user_session_path, class: 'navbar-link'  %>
+        <%= link_to t(:sign_up), new_user_registration_path, class: 'navbar-link'  %> |
+        <%= link_to t(:login), new_user_session_path, class: 'navbar-link'  %>
       <% end %>
     </p>
     <% if notice %>
