ログインユーザー以外のユーザーを修正できないようボタンを非表示にする

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,7 @@
   <%= @user.self_introduction %>
 </p>
 
-<%= link_to t('views.common.edit'), edit_user_registration_path(@user) %> |
+<% if @login_user %>
+  <%= link_to t('views.common.edit'), edit_user_registration_path(@user) %> |
+<% end %>
 <%= link_to t('views.common.back'), users_path %>
