--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
       <th><%= User.human_attribute_name(:name) %></th>
       <th><%= User.human_attribute_name(:postal_code) %></th>
       <th><%= User.human_attribute_name(:address) %></th>
+      <th><%= User.human_attribute_name(:avatar) %></th>
       <th></th>
     </tr>
   </thead>
@@ -18,6 +19,11 @@
         <td><%= user.name %></td>
         <td><%= user.postal_code %></td>
         <td><%= user.address %></td>
+        <% if user.avatar.attached? %>
+          <td><%= image_tag user.avatar.variant(resize_to_limit: [50, 50]) %></td>
+        <% else %>
+          <td></td>
+        <% end %>
         <td><%= link_to t('views.common.show'), user %></td>
       </tr>
     <% end %>
